--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "redux-thunk": "^3.1.0",
     "reselect": "^5.1.0",
     "sass": "^1.70.0",
     "uuid": "^9.0.1"
