--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -3,10 +3,14 @@ FROM node:alpine
 WORKDIR /app
 
 EXPOSE 3000
+EXPOSE 3001
 
 COPY package*.json ./
 
+RUN npm install -g json-server
+
 RUN npm i
+
 
 COPY . .
 
