--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - '3000:3000'
       - '3001:3001'
-    #volumes:
-    #  - /app/node_modules 
-    #  - ./frontend:/app  
+    volumes:
+      - /app/node_modules 
+      - ./frontend:/app  
     
